[package]
name = "tauri_commands-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tauri-import = []
tauri-export = []
specta = []

[dependencies]
proc-macro2 = "1.0.56"
syn = { version = "2.0.13", features = ["full"] }
quote = "1.0.26"
